# fleshwound

./: .gitignore  AGENTS.md  Makefile  README.md  Recursive_step_prompt.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  test.yml
docs/history/: rlm_design_conversation.md
docs/specs/: README.md  budget-ledger.md  catalog-implementation-plan.md  larql-provider-integration-plan.md  larql-provider-protocol.md  open-contract-issues.md  recursion-contract.md  recursion-kinds-catalog.md  rlm-action-protocol.md  rlm-loop-kind.md  rlm_plan.md  spawned-mode-future.md  spawned-worker-protocol.md
fleshwound/: __init__.py  budget.py  catalog.py  context.py  errors.py  fake_llm.py  monty_limits.py  provider.py  runner.py
fleshwound/kinds/: AGENTS.md  __init__.py  _llm_json.py  _minimal_input.py  _shared.py  adversarial_loop.py  always_host_error.py  always_partial.py  ask_user_only.py  ast_transform.py  attack_generator.py  budget_hog.py  calibration.py  cascade.py  catalog_self_test.py  chain_with_adapter.py  clarify_then_delegate.py  classifier.py  cond_dispatch.py  constant.py  content_hash_memo.py  convention_adapter.py  conversation.py  core.py  dedup_then_map.py  diff_writer.py  directory_input.py  directory_writer.py  dynamic_dispatch.py  echo.py  ensemble.py  failure_classifier.py  function_map_editor.py  function_map_writer.py  inherit_chain.py  (+31 more)
tests/: AGENTS.md  _fake_provider.py  _fake_user.py  _golden.py  conftest.py  test_budget_enforcement.py  test_contract_core.py  test_contract_invariants.py  test_doctor.py  test_site_kinds.py
tools/: build_site.py
(+95 files in other folders)
